--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.37",
-    "expo-camera": "^16.0.17",
+    "expo": "~52.0.38",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
+    "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
+    "metro-source-map": "^0.81.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-ble-manager": "^12.1.4",
     "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^8.1.0",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
