--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.76.7",
     "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^8.1.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-vector-icons": "^10.2.0"
