--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.8.3",
     "expo": "~52.0.38",
+    "expo-camera": "~16.0.18",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-location": "~18.0.7",
@@ -28,8 +32,7 @@
     "react-native-image-picker": "^8.1.0",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-camera": "~16.0.18"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
