--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "^7.2.2",
     "metro-source-map": "^0.81.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
